--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^29.2.2",
     "babel-jest": "^29.2.2",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
